# hashbang

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci-linux.yml
examples/: bazel7-url.toml  buck2-url.toml
src/: cache.rs  config.rs  download.rs  execute.rs  extract.rs  main.rs
tests/: integration_buck2.rs
tests/data/: buck2-url.toml  hello_world.sh.zst
