[package]
name = "hashbang"
version = "0.1.1"
authors = ["Alex Hornby <alex@hornby.org.uk>"]
description = "Binary fetcher and launcher"
license = "MIT"
edition = "2021"
repository = "https://github.com/ahornby/hashbang/"
categories = ["caching", "command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0.72"
bytes = "1.4.0"
directories = "5.0.1"
reqwest = "0.11.18"
serde = { version = "1.0.183", features = ["derive"] }
sha256 = "1.3.0"
target-spec = "3.0.1"
tempfile = "3.7.1"
tokio = { version = "1.29.1", features = ["rt", "rt-multi-thread", "macros"] }
toml = { version = "0.7.6"}
url = { version = "2.4.0", features = ["serde"] }
zstd = "0.12.4"

[dev-dependencies]
assert_cmd = "2.0.11"
